refactor: remove unused files