@@ -1,13 +1,17 @@
+import com.google.protobuf.gradle.id
 import com.google.protobuf.gradle.protobuf
+import com.google.protobuf.gradle.remove
+import utils.Props
+import utils.Vers
 import utils.Vers.versionAuthorizationServer
 import utils.Vers.versionBcpkix
 import utils.Vers.versionCaffeine
 import utils.Vers.versionCommonsCodec
 import utils.Vers.versionCommonsLang3
 import utils.Vers.versionFlyway
+import utils.Vers.versionJackson
 import utils.Vers.versionJwt
 import utils.Vers.versionMapstruct
-import utils.Vers.versionJackson
 import utils.Vers.versionMysqlConnector
 import utils.Vers.versionNetty
 import utils.Vers.versionPeashooter
@@ -16,12 +20,28 @@ import utils.Vers.versionTestContainers
 import utils.Vers.versionWebpb
 
 plugins {
-  id("java.service")
+  id("com.diffplug.spotless")
+  id("com.github.kt3k.coveralls")
+  id("com.google.protobuf")
+  id("conventions.common")
+  id("io.spring.dependency-management")
+  id("org.springframework.boot")
+  jacoco
+  java
+}
+
+group = "io.github.jinganix.ddz"
+version = "${versionWebpb}-SNAPSHOT"
+
+java {
+  sourceCompatibility = JavaVersion.VERSION_21
 }
 
 dependencies {
   annotationProcessor("io.github.jinganix.webpb:webpb-processor:${versionWebpb}")
+  annotationProcessor("org.projectlombok:lombok:${Vers.versionLombok}")
   annotationProcessor("org.mapstruct:mapstruct-processor:${versionMapstruct}")
+  compileOnly("org.projectlombok:lombok:${Vers.versionLombok}")
   implementation("com.auth0:java-jwt:${versionJwt}")
   implementation("com.fasterxml.jackson.core:jackson-databind:${versionJackson}")
   implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${versionJackson}")
@@ -49,27 +69,95 @@ dependencies {
   implementation("org.testcontainers:junit-jupiter:${versionTestContainers}")
   implementation("org.testcontainers:mysql:${versionTestContainers}")
   implementation("org.testcontainers:testcontainers:${versionTestContainers}")
-  implementation(project(":lib:proto"))
+  protobuf(project(":proto:imports"))
   protobuf(project(":proto:internal"))
   protobuf(project(":proto:service"))
   runtimeOnly("mysql:mysql-connector-java:${versionMysqlConnector}")
+  testAnnotationProcessor("org.projectlombok:lombok:${Vers.versionLombok}")
   testAnnotationProcessor("org.mapstruct:mapstruct-processor:${versionMapstruct}")
+  testCompileOnly("org.projectlombok:lombok:${Vers.versionLombok}")
   testImplementation("org.springframework.boot:spring-boot-starter-test")
   testImplementation("org.springframework.security:spring-security-test")
   testImplementation("org.testcontainers:junit-jupiter:${versionTestContainers}")
   testImplementation("org.testcontainers:testcontainers:${versionTestContainers}")
 }
 
-tasks.withType<JavaCompile> {
-  options.compilerArgs.add("--enable-preview")
+tasks.withType<Test> {
+  useJUnitPlatform()
 }
 
 tasks.test {
-  useJUnitPlatform()
-  jvmArgs("--enable-preview")
+  finalizedBy(tasks.jacocoTestReport)
 }
 
-tasks.bootJar {
-  archiveFileName.set("guess-service.jar")
-  launchScript()
+tasks.jacocoTestReport {
+  dependsOn(tasks.test)
+
+  reports {
+    html.required.set(true)
+    xml.required.set(true)
+  }
+}
+
+tasks.jacocoTestCoverageVerification {
+  enabled = Props.verifyCoverage
+  dependsOn(tasks.jacocoTestReport)
+  violationRules {
+    rule {
+      limit {
+        minimum = Props.jacocoMinCoverage.toBigDecimal()
+      }
+    }
+  }
+}
+
+tasks.check {
+  dependsOn(tasks.jacocoTestCoverageVerification)
+}
+
+jacoco {
+  toolVersion = Vers.versionJacocoAgent
+}
+
+if (Props.verifyJavaDocs) {
+  java {
+    withJavadocJar()
+    withSourcesJar()
+  }
+}
+
+spotless {
+  java {
+    googleJavaFormat()
+
+    targetExclude("build/**/*.java")
+  }
+}
+
+tasks.check {
+  dependsOn(tasks.spotlessCheck)
+}
+
+protobuf {
+  protoc {
+    artifact = "com.google.protobuf:protoc:${Vers.versionProtobuf}"
+  }
+  plugins {
+    id("webpb") {
+      artifact = "io.github.jinganix.webpb:webpb-protoc-java:${versionWebpb}:all@jar"
+    }
+  }
+  generateProtoTasks {
+    ofSourceSet("main").forEach {
+      it.doFirst {
+        delete(it.outputBaseDir)
+      }
+      it.builtins {
+        remove("java")
+      }
+      it.plugins {
+        id("webpb")
+      }
+    }
+  }
 }
